--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,5 +20,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: The Harmsworth Magazine, Vol. 1, No. 3, 1898-1899
 url: http://www.gutenberg.org/ebooks/49796
